Revision history for Perl extension HTTP::BrowserDetect.

{{$NEXT}}

3.10 2016-03-29 22:15:35 America/Toronto
    - Big change: Add robot version detection, distinct from browser
      version (first cut) (andrewmoise)
    - Add browsers: Pubsub (Safari RSS reader), ADM (Android Download
      Manager), ImageSearcherPro (iOS app) (andrewmoise)
    - Add robots: Google favicon, malware/shellcode, phplib,
      Verisign IPS agent, Nutch, thumbtack-thunderdome (andrewmoise)
    - Distinguish Bingbot from MSNbot (andrewmoise)
    - Only detect wget based on the beginning of the user-agent
      (andrewmoise)
    - Misc fixes to test support scripts (andrewmoise)
    - Add Kindle Fire (andrewmoise)
    - Detect curl by matching /^curl/ as well as /libcurl/
      (andrewmoise)
    - Remove webcrawler robot test (it triggers on too many distinct
      robots which all include "webcrawler") (andrewmoise)

3.00 2016-02-29 22:57:45 America/Toronto
    - Make "mobile" false when "tablet" is true.  This is a breaking change and
      has triggered a major version bump. (andrewmoise)

2.08 2016-01-29 21:56:29 America/Toronto
    - Brave browser detection added (Nicolas Doye)

2.07 2015-11-18 23:52:07 America/Toronto
    - Strip off anything Google Translate adds to UserAgent before parsing
      (Marco Fontani)

2.06 2015-11-15 10:59:30 America/Toronto
    - Detect more Edge versions (Marco Fontani)

2.05 2015-07-29 12:36:01 America/Toronto
    - Add Microsoft Windowns 10/Windows Phone 10 Edge Browser (Atsushi Kato)

2.04 2015-06-24 23:26:28 America/Toronto
    - Fix test failures on Perl 5.8

2.03 2015-06-19 09:59:45 America/Toronto
    - Add win8_1 method (Daniel Stadie)

2.02 2015-06-17 18:18:17 America/Toronto
    - Default to using an empty string if an undef UA is provided (ben hengst)

2.01 2015-04-24 23:05:13 America/Toronto
    - Handle "CriOS" entries correctly (andrewmoise)
    - Only detect java when no browser is detected, and make UCBrowser a